Initial commit of entire workspace

--- a/src/precision_land/cfg/params.yaml
+++ b/src/precision_land/cfg/params.yaml
@@ -1,6 +1,7 @@
 precision_land:
   ros__parameters:
-    descent_vel: 0.6
+    ascent_vel: -0.2
+    descent_vel: 0.2
     vel_p_gain: 1.7
     vel_i_gain: 0.0
     max_velocity: 3.0
