--- a/src/precision_land/package.xml
+++ b/src/precision_land/package.xml
@@ -19,6 +19,7 @@
   <depend>px4_ros2_cpp</depend>
   <depend>geometry_msgs</depend>
   <depend>tf2_ros</depend>
+  <depend>std_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
