--- a/src/zd_px4_comm/package.xml
+++ b/src/zd_px4_comm/package.xml
@@ -15,6 +15,8 @@
   <depend>tf2_ros</depend>
   <depend>tf2</depend>
   <depend>numpy</depend>
+  <depend>csv</depend>
+  <depend>os</depend>
 
   <!-- ROS 2 Dependencies -->
   <exec_depend>ros2launch</exec_depend>
