--- a/src/ros2_v4l2_camera/package.xml
+++ b/src/ros2_v4l2_camera/package.xml
@@ -16,6 +16,9 @@
 
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>rclcpp_components</exec_depend>
+  <exec_depend>ament_cmake</exec_depend>
+  <exec_depend>launch</exec_depend>
+  <exec_depend>launch_ros</exec_depend>
 
   <depend>sensor_msgs</depend>
   <depend>camera_info_manager</depend>
